# canary

./: .dockerignore  .editorconfig  .gitignore  .pip-audit-ignore.txt  .pre-commit-config.yaml  =1.1.390  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SUPPORT.md  compose.yaml  coverage.xml  docker-entrypoint.sh  pyproject.toml  requirements-build.in  requirements-build.txt  requirements-ci.txt  requirements-dev.in  requirements-dev.txt  requirements.txt
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/agents/: unit-test.agent.md
.github/workflows/: cflite_pr.yml  ci.yml  codeql.yml  dependabot-lockfile-regen.yml  dependabot.yml  mutation.yml  pre-commit-autoupdate.yml  scorecard.yml  zizmor.yml
canary/: __init__.py  cli.py  plugin_aliases.py  webapp.py
canary/cli/: __init__.py  __main__.py  _common.py  build.py  collect.py  score.py  train.py
canary/collectors/: __init__.py  _path_utils.py  gharchive_history.py  github_plugin.py  github_repo.py  healthscore.py  jenkins_advisories.py  plugin_snapshot.py  plugins_registry.py  software_heritage.py  software_heritage_athena.py  software_heritage_backend.py
canary/datasets/: gharchive.py  github_repo_features.py
canary/devtools/: __init__.py  pip_audit_wrapper.py
canary/scoring/: __init__.py  baseline.py  ml.py
canary/train/: baseline.py  feature_selection.py  registry.py
canary/web/: __init__.py  services.py  ui.py
crossval/pypi/: 00_collect_universe.py  01_collect_osv.py  02_build_monthly.py  03_train.py  04_dedup_precision.py  README.md
data/: README.md
data/raw/advisories/: README.md
data/raw/gharchive/: README.md
data/raw/plugins/: README.md
data/raw/software_heritage_athena/: README.md
deploy/nginx/: default.conf
fuzzers/: jenkins_url_fuzzer.py
scripts/: run_tests.sh
tests/: conftest.py  test_build_advisories_events.py  test_build_advisories_events_extra.py  test_build_feature_bundle.py  test_build_monthly_feature_bundle.py  test_build_monthly_labels_extra.py  test_cli_coverage_gaps.py  test_cli_helpers.py  test_collectors.py  test_coverage_gaps.py  test_feature_selection.py  test_feature_selection_gaps.py  test_feature_selection_more.py  test_features_bundle.py  test_features_bundle_coverage_gaps.py  test_features_bundle_helpers.py  test_features_bundle_swh_athena_fixture.py  test_gharchive.py  test_gharchive_helpers.py  test_gharchive_history.py  test_gharchive_history_more.py  test_github_plugin.py  test_github_repo.py  test_github_repo_extra.py  test_github_repo_helpers.py  test_healthscore.py  test_jenkins_advisories.py  test_jenkins_advisories_helpers.py  test_jenkins_advisories_real.py  test_ml_feature_contract.py  test_monthly_features.py  test_monthly_features_more_gharchive.py  test_monthly_features_swh_athena_more.py  test_monthly_label.py  test_monthly_labels.py  test_monthly_labels_density.py  test_monthly_labels_extra.py  test_path_utils.py  test_pip_audit_wrapper.py  test_pip_audit_wrapper_extra.py  (+30 more)
tests/fixtures/: plugins_api_cucumber-reports.json
tests/fixtures/data/raw/advisories/: credentials.advisories.real.jsonl  workflow-cps.advisories.real.jsonl
tests/fixtures/data/raw/plugins/: credentials.snapshot.json  workflow-cps.snapshot.json
tests/fixtures/data/raw/registry/: plugins.jsonl
tests/fixtures/software_heritage_athena/: demo-plugin.swh_athena_index.json  demo-plugin.swh_athena_visits.jsonl
tools/: README.md  collect_canary_results.py  create_swh_athena_tables.py  dedup_precision.py  extract_jenkins_swh_subset.py  filter_monthly_labeled_features.py  h1_odds_ratio.py  heuristic_baseline.py  make_figures.py  repartition_swh_tables.py  run_monthly_ablation_experiments.sh  simpson_stratified.py  summarize_ablation_metrics.py  test_athena_connection.py
