[project]
name = "canary"
version = "0.1.10"
description = "CANARY: Component Analytics & Near-term Advisory Risk Yardstick"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.43.18",
  "requests>=2.34.2",
  "beautifulsoup4>=4.14.3",
  "google-cloud-bigquery>=3.41.0",
  "cryptography>=48.0.0",
  "numpy>=2.4.6",
  "scikit-learn>=1.9.0",
  "pandas>=3.0.3",
  "python-dotenv>=1.2.2",
  "pyasn1>=0.6.3",
  "waitress>=3.0.2",
  "xgboost>=3.2.0",
  "lightgbm>=4.6.0",
  "shap>=0.52.0",
]

[project.scripts]
canary = "canary.cli:main"
canary-web = "canary.webapp:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["canary*"]
exclude = ["data*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Coverage is a ratchet, not a target: --cov-fail-under stops regressions, but new
# tests must be justified by the behavior they protect, never by coverage alone
# (see .github/agents/unit-test.agent.md). Current floor reflects ~93% actual with
# headroom for planned consolidation of implementation-coupled tests; tighten it
# back up after each consolidation lands.
addopts = "-ra --cov=canary --cov-report=term-missing --cov-fail-under=91"

[tool.coverage.run]
branch = true
source = ["canary"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"
cache-dir = "/tmp/.ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
include = ["canary", "tests"]
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
