[project]
name = "canary"
version = "0.1.12"
description = "CANARY: Component Analytics & Near-term Advisory Risk Yardstick"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.43.25",
  "requests>=2.34.2",
  "beautifulsoup4>=4.15.0",
  "google-cloud-bigquery>=3.41.0",
  "cryptography>=48.0.1",
  "numpy>=2.4.6",
  "scikit-learn>=1.9.0",
  "pandas>=3.0.3",
  "python-dotenv>=1.2.2",
  "pyasn1>=0.6.3",
  "waitress>=3.0.2",
  "xgboost>=3.2.0",
  "lightgbm>=4.6.0",
  "shap>=0.52.0",
]

[project.scripts]
canary = "canary.cli:main"
canary-web = "canary.webapp:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["canary*"]
exclude = ["data*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Coverage is a ratchet, not a target: --cov-fail-under stops regressions, but new
# tests must be justified by the behavior they protect, never by coverage alone
# (see .github/agents/unit-test.agent.md). Floor restored to 93% after all planned
# consolidations landed; raise further only after a green test run confirms headroom.
addopts = "-ra --cov=canary --cov-report=term-missing --cov-fail-under=93"

[tool.coverage.run]
branch = true
source = ["canary"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"
cache-dir = "/tmp/.ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
include = ["canary", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"

[tool.mutmut]
# Mutate only the scoring package — the core logic that the project's academic
# claims rest on.  This keeps the weekly run well within the 6-hour CI limit.
# To expand coverage: add more patterns to only_mutate (must end in .py or *).
source_paths = ["canary/scoring", "canary/collectors"]
only_mutate = ["canary/scoring/baseline.py", "canary/scoring/ml.py"]
# also_copy: mutmut runs pytest inside mutants/, so the full canary package must
# be present there for any test that imports outside the mutation scope to work.
# mutmut writes the mutated source_paths files last, so scoring/ and collectors/
# end up with their mutant versions while everything else is the original.
also_copy = ["canary"]
# Disable coverage during mutation runs: --cov adds ~10x overhead per mutant
# and --cov-fail-under would produce false "killed" results.
pytest_add_cli_args = ["--no-cov", "-p", "no:cacheprovider", "-q", "--no-header"]
